<resources>
    <string name="app_name">MenuOnline</string>
    <string name="d_nh_cho_kh_ch_h_ng">Dành Cho Khách Hàng</string>
    <string name="d_nh_cho_c_a_h_ng">Dành Cho Cửa Hàng</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="go">go</string>
    <string name="forgotPassword">forgot password</string>
    <string name="register">Register</string>
    <string name="repeat_password">repeat password</string>
    <string name="next">next</string>
    <string name="guest">Guest user</string>
    <string name="title">Foody</string>
    <string name="table">Table</string>
    <string name="checkin_for">Check in for</string>
    <string name="enable_flashlight">Enable flashlight</string>
    <string name="meal_cost">Meal cost</string>
    <string name="customer_per_day">Customer per day</string>
    <string name="get_meal_error">Error getting meal documents.</string>
    <string name="get_daily_error">Error getting daily data documents.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
